Atualização lambda API
